# FlyPlayer

./: README.md  settings.gradle
ffmpeg/: .gitignore  CMakeLists.txt  build.gradle
ffmpeg/ffmpeg-4.2.2/: buildffmpeg_clang.sh  config.h
ffmpeg/ffmpeg-4.2.2/android_out/armv7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg/ffmpeg-4.2.2/android_out/armv7a/share/doc/ffmpeg/: ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-protocols.html  ffmpeg-utils.html  ffprobe.html  libavcodec.html  libavformat.html  libavutil.html  libswresample.html  nut.html
ffmpeg/ffmpeg-4.2.2/android_out/armv7a/share/man/man1/: ffmpeg-all.1  ffmpeg.1  (+3 more)
ffmpeg/ffmpeg-4.2.2/doc/: config.texi  developer.html  faq.html  fate.html  fate.txt  ffmpeg-all.html  ffmpeg-bitstream-filters.1  ffmpeg-bitstream-filters.html  ffmpeg-codecs.1  ffmpeg-devices.1  ffmpeg-formats.html  ffmpeg-resampler.html  ffmpeg-scaler.html  ffmpeg.html  ffprobe-all.1  ffprobe-all.html  general.html  git-howto.html  libavdevice.html  libavfilter.html  libswscale.html  mailing-list-faq.html  platform.html  print_options
ffmpeg/ffmpeg-4.2.2/doc/examples/pc-uninstalled/: libavfilter-uninstalled.pc
ffmpeg/ffmpeg-4.2.2/ffbuild/: config.fate  config.mak  config.sh
ffmpeg/ffmpeg-4.2.2/fftools/: ffmpeg.d
ffmpeg/ffmpeg-4.2.2/libavcodec/: codec_list.c  mediacodec.d
ffmpeg/ffmpeg-4.2.2/libavdevice/: libavdevice.so.58  v4l2.d
ffmpeg/ffmpeg-4.2.2/libavformat/: golomb_tab.d  libavformat.pc
ffmpeg/ffmpeg-4.2.2/libavutil/: libavutil.pc
ffmpeg/ffmpeg-4.2.2/libswresample/: libswresample.pc  libswresample.so.3
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: FlyLog.h  flyffmpeg-lib.cpp
(+15 files in other folders)
